# SkyNetControl

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  default.nix  frontend.nix  module.nix  oci.nix  probe-mailbox.py  pyproject.toml  run-dev.sh  shell.nix
.github/workflows/: ci.yml  container.yml
alembic/: env.py
alembic/versions/: 064082225c20_rename_map_url_to_session_url.py  3c8e5fa10001_add_net_id_to_net_sessions.py  4b3cb52b36dd_add_notifications_table.py  4d657143fdea_add_reminders_tables.py  572315038dc3_add_users_and_app_config_tables.py  603f5040bba2_import_env_to_app_config.py  620025869fb3_add_token_version_to_users.py  7bc4a2f1e0d9_footer_signoff_from_nco.py  7e2d4f81b3a9_heal_stale_unique_name_constraints.py  82438e47278e_add_personal_access_tokens.py  834e2b6db91d_add_sender_callsign_to_chat_messages.py  859ed3de034e_multi_net_cutover.py  c72c8361ac50_add_user_is_admin.py  (+20 more)
backend/: app.py  config.py  version.py
docs/: audit-2026-05-27.md  development.md
frontend/: index.html  package-lock.json  package.json
scripts/: setup.py
tests/: conftest.py  test_activity_models.py  test_activity_routes.py  test_activity_service.py  test_admin_or_recovery_gating.py  test_admin_test_routes.py  test_app_db.py  test_audit.py  test_auth_dependencies.py  test_auth_email.py  test_auth_models.py  test_auth_providers.py  test_auth_registration.py  test_auth_routes.py  test_auth_service.py  test_auth_service_discovery.py  test_callbook_providers.py  test_callbook_routes.py  test_callbook_service.py  test_chat_models.py  test_chat_routes.py  test_chat_service.py  test_checkin_models.py  test_checkin_modes.py  test_checkin_routes.py  test_checkin_service.py  test_config_bulk_route.py  test_config_env_nesting.py  test_config_mgmt.py  test_config_mgmt_oauth.py  test_config_mgmt_setup_state.py  test_config_mgmt_smtp.py  test_config_oidc.py  test_config_routes.py  test_database.py  test_db_copy.py  test_delivery_base.py  test_delivery_email.py  test_delivery_groupsio.py  test_delivery_models.py  (+59 more)
(+241 files in other folders)
